feat: add profile info change

--- a/config.json
+++ b/config.json
@@ -1,3 +1,9 @@
 {
-    "apiKey": ""
+    "apiKey": "",
+    "profile_change": {
+        "globalname_enable": true,
+        "bio_enable": true,
+        "globalname": "Z Deliver",
+        "bio": "https://discord.gg/6FsNprxMbY"
+    }
 }
